@@ -546,6 +546,16 @@ class EntityFacadeImpl implements EntityFacade {
         return allNames
     }
 
+    boolean isEntityDefined(String entityName) {
+        try {
+            EntityDefinition ed = getEntityDefinition(entityName)
+            return ed != null
+        } catch (EntityException ee) {
+            // ignore the exception, just means entity not found
+            return false
+        }
+    }
+
     EntityDefinition getEntityDefinition(String entityName) {
         if (!entityName) return null
         EntityDefinition ed = (EntityDefinition) this.entityDefinitionCache.get(entityName)
